vba procedures and macro names will result in crash, fdo#55174

Change-Id: I23073ecc56482670d185b39452a7d8b9d6eb38c8